--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+<div class="wrapper">
 <section id="home">
     <div class="banner-container">
       <div class="hero-text animated fadeInDownBig">
@@ -52,18 +53,18 @@
         </div>
         <div class="col-lg-5 col-md-5 col-xs-9 col-11">
           <p>    
-              ああああポーあラあドあラあのインストラクターは全員、日本フィギュアスケート協会に所属し、元全日本選手
-              や日本体育協会公認コーチなど経験豊富なスタッフがスケートを教えています。
-              小さなお子様から大人の方まで幅広いレベルに合わせた個人レッスン及びグループレッスンで確実な技術の向上を
-              目指しています。
+              ああああポーあラあドあラあのインストラクターはあああああああああああーあああにああし、ああああああ
+              やああああああああーあああああああああああああーあっっっっっっっっz。
+              あああああああああああああああああああああああああああああああああああああああああああああああああああ
+              ああああああああああああああああああああああ。
           </p>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-11 col-11">
           <ul class="plan">
             <li class="plan-name">レッスンについて </li>
-            <li style="text-align: left;"> <strong>ああ：</strong> ¥xxxx/xx分 </li>
-            <li style="text-align: left;"> <strong>ああ：</strong> <a style="color:chocolate" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランドスケートリンク</a> </li>
-            <li style="text-align: left;"> <strong>あああ：</strong> aaaaaaaaaaaaa＠gmail.com</li>
+            <li style="text-align: left;"> <strong>料金：</strong> ¥xxxx/xxx </li>
+            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:chocolate" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">あああスあーツあンドああーああああ</a> </li>
+            <li style="text-align: left;"> <strong>連絡先：</strong> aaaaaaaaaaaaa＠gmail.com</li>
             <li class="plan-action"> <a href="mailto:xxxxxxxxxxx&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
           </ul>
         </div>
@@ -73,10 +74,10 @@
 
 
 <!--/.page-section-->
-<section >
+<section class="copyright">
   <div class="container">
     <div class="row copyright">
-      <footer class="col-sm-12 text-center"> Copyright 2014 | All Rights Reserved -- Template by <a href="http://webThemez.com">WebThemez.com</a> </footer>
+      <div class="col-sm-12 text-center"> Copyright 2014 | All Rights Reserved -- Template by <a href="http://webThemez.com">WebThemez.com</a> </div>
     </div>
     <!-- / .row --> 
   </div>
@@ -94,5 +95,6 @@
 <script src="js/waypoints.js"></script> 
 <script src="js/custom.js" type="text/javascript"></script> 
 <script src="js/owl-carousel/owl.carousel.js"></script>
+</div>
 </body>
 </html>
