--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <br>
             xxxxxx  xxx
             <br><br>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            あああああああああああああああああああああああああああああああ
+            ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
           </p>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12 col-12">
@@ -73,7 +73,7 @@
             <li style="text-align: left;"> <strong>xxxxxx：</strong> xxxx、xxx</li>
             <li style="text-align: left;"> <strong>xxxxx：</strong> xxxxxxxxxxxx＠gmail.com</li>
             <li style="text-align: left;">
-              xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<br>
+              ああああああああああああああああああああああああああああああ<br>
             </li>
             <li class="plan-action"> <a href="mailto:xxxxxxxxxxxxxxxxxxx&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
           </ul>
