--- a/index.html
+++ b/index.html
@@ -46,25 +46,27 @@
       <div class="row feature design flat">
         <div class="col-lg-3 col-md-3 col-xs-3 col-3">
           <div style="text-align: center;">
-            <p style="visibility:hidden"> hidden<p> 
             <img class="images" src="images/feature-img-1.png" alt=""> 
           </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-xs-9 col-9">
-          <p style="visibility:hidden"> hidden<p>            
-          <p>             
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+        <div class="col-lg-9 col-md-9 col-xs-9 col-9 pSmaller">
+          <p>    
+            <br>         
+            日本フィギュアスケートインストラクター協会会員
             <br>
-            xxxxxxxxxxxxxxxxxxxxxxx xxx
+            日本スケート連盟バッジテスト 7級
             <br>
-            xxxxxx  xxx
-            <br><br>
-            あああああああああああああああああああああああああああああああ
-            ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
-          </p>
+            指導歴： 16年
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 col-12">
-          <p style="visibility:hidden"> hidden<p>            
+      </div>
+      <div class="row feature design flat">
+        <div class="col-lg-5 col-md-0 col-xs-12 col-12 pSmall">
+            <p>
+              江戸川スポーツランドクラブでフィギュアスケートを教えています。
+              就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
+            </p>
+        </div>
+        <div class="col-lg-7 col-md-4 col-xs-12 col-12 pSmall">
           <ul class="plan">
             <li class="plan-name">xxxxxxxxxxxxx </li>
             <li style="text-align: left;"> <strong>xxxxxxxxxxxxxx</strong> xxx/xxxxx </li>
