--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>XXXX XXXXXXXXXXXXXXXXXXXXXXXXxx</title>
+<title>岩間三恵 インストラクター 江戸川スポーツランドフィギュアスケートクラブ</title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
