--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img class="images" src="images/feature-img-1.png" alt=""> 
           </div>
         </div>
-        <div class="col-lg-6 col-md-8 col-xs-9 col-10 pSmaller">
+        <div class="col-lg-7 col-md-8 col-xs-9 col-10 pSmaller">
           <p>    
             <br>   
             日本スポーツ協会公認スポーツ指導者スケートコーチ
@@ -70,11 +70,11 @@
               就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
             </p>
         </div>
-        <div class="col-lg-6 col-md-7 col-xs-12 col-12 pSmall">
+        <div class="col-lg-6 col-md-8 col-xs-12 col-12 pSmall">
           <ul class="plan">
             <li class="plan-name">レッスンについて </li>
             <li style="text-align: left;"> <strong>個人レッスン料金：</strong> 30分/¥3500 </li>
-            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:#dc143c" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランド</a> </li>
+            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:#008000" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランド</a> </li>
             <li style="text-align: left;"> <strong>指導言語：</strong> 日本語、英語</li>
             <li style="text-align: left;"> <strong>連絡先：</strong> mitsueiwamaskate＠gmail.com</li>
             <li style="text-align: left;">
