--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
 <!--[if (gt IE 9)|!(IE)]><!-->
 <html lang="en-gb" class="no-js">
 <!--<![endif]-->
-<head>
-<meta name="google-site-verification" content="Xg71Zc9FOPZ4PhqMLZLbOOhVipVWpWmikszi9QEkxVo" />
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<!--[if lt IE 9]> 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<span style="color: #000000;">
+  <head>
+  <meta name="google-site-verification" content="Xg71Zc9FOPZ4PhqMLZLbOOhVipVWpWmikszi9QEkxVo" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="canonical" href="https://lizhenluna12.github.io/skating-instructor-mitsue/">
+  <!--[if lt IE 9]> 
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <![endif]-->
+  <title>岩間三恵 インストラクター 江戸川スポーツランドフィギュアスケートクラブ</title>
+  <meta name="description" content="">
+  <meta name="author" content="WebThemez">
+  <!--[if lt IE 9]>
+          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
+  <!--[if lte IE 8]>
+      <script type="text/javascript" src="http://explorercanvas.googlecode.com/svn/trunk/excanvas.js"></script>
     <![endif]-->
-<title>岩間三恵 インストラクター 江戸川スポーツランドフィギュアスケートクラブ</title>
-<meta name="description" content="">
-<meta name="author" content="WebThemez">
-<!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-<!--[if lte IE 8]>
-		<script type="text/javascript" src="http://explorercanvas.googlecode.com/svn/trunk/excanvas.js"></script>
-	<![endif]-->
-<link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />
-<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-<link href="css/animate.css" rel="stylesheet" media="screen">
-<!-- Owl Carousel Assets -->
-<link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
-<link rel="stylesheet" href="css/styles_version2_white.css" />
-<!-- Font Awesome -->
-<link href="font/css/font-awesome.min.css" rel="stylesheet">
-</head>
-
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />
+  <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+  <link href="css/animate.css" rel="stylesheet" media="screen">
+  <!-- Owl Carousel Assets -->
+  <link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles_version2_white.css" />
+  <!-- Font Awesome -->
+  <link href="font/css/font-awesome.min.css" rel="stylesheet">
+  </head>
+</span>
+	
 <body>
 <section id="features" >　
     <div class="container">     
