--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <![endif]-->
   <title>岩間三恵 インストラクター 江戸川スポーツランドフィギュアスケートクラブ</title>
-  <meta name="description" content="">
+  <meta name="description" content="江戸川スポーツランドフィギュアスケートクラブのインストラクター 岩間三恵のホームページ">
   <meta name="author" content="WebThemez">
   <!--[if lt IE 9]>
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -51,7 +51,7 @@
       <div class="row feature design flat">
         <div class="col-lg-5 col-md-4 col-xs-3 col-2">
           <div style="text-align: center;">
-            <img class="images" src="images/feature-img-1.png" alt=""> 
+            <img class="images" src="images/feature-img-1.png" alt="江戸川スポーツランドフィギュアスケートクラブのインストラクター岩間三恵"> 
           </div>
         </div>
         <div class="col-lg-7 col-md-8 col-xs-9 col-10 pSmaller">
