--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <![endif]-->
   <title>岩間三恵 インストラクター 江戸川スポーツランドフィギュアスケートクラブ</title>
-  <meta name="description" content="江戸川スポーツランドフィギュアスケートクラブのインストラクター 岩間三恵のホームページ">
+  <meta name="description" content="江戸川スポーツランドフィギュアスケートクラブ インストラクター 岩間三恵">
   <meta name="author" content="WebThemez">
   <!--[if lt IE 9]>
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
