--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--[if lt IE 9]> 
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <![endif]-->
-  <title>岩間三恵 インストラクター 江戸川スポーツランドフィギュアスケートクラブ</title>
+  <title>岩間三恵 江戸川スポーツランドフィギュアスケートクラブ インストラクター</title>
   <meta name="description" content="江戸川スポーツランドフィギュアスケートクラブ インストラクター 岩間三恵">
   <meta name="author" content="WebThemez">
   <!--[if lt IE 9]>
