--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <!--[if lt IE 9]> 
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <![endif]-->
-  <title>岩間三恵 江戸川スポーツランドフィギュアスケートクラブ インストラクター</title>
-  <meta name="description" content="江戸川スポーツランドフィギュアスケートクラブ インストラクター 岩間三恵">
+  <title>岩間三恵 フィギュアスケートインストラクター</title>
+  <meta name="description" content="フィギュアスケートクラブ インストラクター 岩間三恵">
   <meta name="author" content="WebThemez">
   <!--[if lt IE 9]>
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -66,24 +66,10 @@
         </div>
       </div>
       <div class="row feature design flat">
-        <div class="col-lg-5 col-md-4 col-xs-12 col-12 pSmall">
+        <div class="col-lg-12 col-md-12 col-xs-12 col-12 pSmall">
             <p>
-              江戸川スポーツランドクラブでフィギュアスケートを教えています。
-              就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
+              フィギュアスケートを教えています。就学前のお子様から選手を目指す方、大人だけど滑ってみたい方など、フィギュアスケートを習いたい方々の様々な想いに応えます！
             </p>
-        </div>
-        <div class="col-lg-6 col-md-8 col-xs-12 col-12 pSmall">
-          <ul class="plan">
-            <li class="plan-name">レッスンについて </li>
-            <li style="text-align: left;"> <strong>個人レッスン料金：</strong> 30分/¥3500 </li>
-            <li style="text-align: left;"> <strong>場所：</strong> <a style="color:#008000" href="https://goo.gl/maps/64MZyCwNWT7n31oTA">江戸川スポーツランド</a> </li>
-            <li style="text-align: left;"> <strong>指導言語：</strong> 日本語、英語</li>
-            <li style="text-align: left;"> <strong>連絡先：</strong> mitsueiwamaskate＠gmail.com</li>
-            <li style="text-align: left;">
-                    お問い合わせだけでも結構です。<br class="oneLine"><br class="oneLine">ぜひ、お気軽にご連絡ください。<br>
-            </li>
-            <li class="plan-action"> <a href="mailto:mitsueiwamaskate&#64;gmail.com?subject=%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%81%AE%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B&amp;body=%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%E5%B9%B4%E9%BD%A2%EF%BC%9A%0D%0A%E6%80%A7%E5%88%A5%EF%BC%9A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A" class="btn btn-danger btn-lg">お問い合わせ</a> </li>
-          </ul>
         </div>
       </div>
     </div>
